--- a/Compute Ops Mgr -- Golang.ipynb
+++ b/Compute Ops Mgr -- Golang.ipynb
@@ -320,8 +320,8 @@
      "output_type": "stream",
      "text": [
       "Http Resonse Code 200 OK\n",
-      "Name: esx.ctc.bbn.hpe.com \t\t Id: 867960-B21+CZJ84502PX \t\t Health: OK \n",
-      "Name: CZ20410D0Z \t\t Id: P19719-B21+CZ20410D0Z \t\t Health: WARNING \n"
+      xxame: esx.ctc.bbn.hpe.com \t\t Id: 867960-B21+CZxxxxxxxxX \t\t Health: OK \n",
+      "Name: CZ20xxxxxZ \t\t Id: P19719-B21+CZxxxxxxxZ \t\t Health: WARNING \n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ServerID: P19719-B21+CZ20410D0Z \n",
+      "ServerID: P19719-B21+xxxxxxx0Z \n",
       " AlertID: 88a31502-92dc-44a6-a96e-2d8f990264af \n",
       " Severity WARNING \n",
       " Description: Memory subsystem health is currently Warning. CoM is not able to gather additional details at this time \n",
@@ -451,8 +451,8 @@
     "\n",
     "\n",
     "func listalert(token string) {\n",
-    "  //id := \"867960-B21+CZJ84502PX\"\n",
-    "  id := \"P19719-B21+CZ20410D0Z\"  \n",
+    "  //id := \"867960-B21+xxxxxx2PX\"\n",
+    "  id := \"P19719-B21+CZxxxxxxxZ\"  \n",
     "  reqUrl := \"https://eu-central1-api.compute.cloud.hpe.com/compute-ops/v1beta1/servers/\" + id + \"/alerts\"\n",
     "  req, _ := http.NewRequest(\"GET\", reqUrl, nil)\n",
     "\n",
